add photos to places
