# public/swagger.json
@@ -2016,6 +2016,323 @@
         }
       }
     },
+    "/places/{places_id}/photos": {
+      "get": {
+        "tags": [
+          "photos"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "get photos",
+        "operationId": "photos",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "places_id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "type": "integer",
+            "format": "int64",
+            "default": 0
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "type": "integer",
+            "format": "int64",
+            "default": 20
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "$ref": "#/definitions/Photo"
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/InternalServerError"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "photos"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "new photo",
+        "operationId": "create-photo",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "places_id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Create new photo",
+            "required": true,
+            "schema": {
+              "properties": {
+                "url": {
+                  "type": "string",
+                  "example": "https://place.com/pucture.jpg"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "$ref": "#/definitions/Photo"
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/Forbidden"
+          },
+          "500": {
+            "$ref": "#/responses/InternalServerError"
+          }
+        }
+      }
+    },
+    "/places/{places_id}/photos/{id}": {
+      "get": {
+        "tags": [
+          "photos"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "get photo",
+        "operationId": "photo",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "places_id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          },
+          {
+            "in": "path",
+            "name": "id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "$ref": "#/definitions/Photo"
+            }
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/InternalServerError"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "photos"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "modify photo",
+        "operationId": "modify-photo",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "places_id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          },
+          {
+            "in": "path",
+            "name": "id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Modify photo",
+            "required": true,
+            "schema": {
+              "properties": {
+                "url": {
+                  "type": "string",
+                  "example": "https://place.com/pucture.jpg"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "202": {
+            "description": "Updated",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "$ref": "#/definitions/Сomment"
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/InternalServerError"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "photos"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "delete photo",
+        "operationId": "delete-photo",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "places_id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          },
+          {
+            "in": "path",
+            "name": "id",
+            "type": "integer",
+            "format": "int64",
+            "required": true,
+            "default": 1
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Deleted"
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/responses/InternalServerError"
+          }
+        }
+      }
+    },
     "/rooms": {
       "get": {
         "tags": [
@@ -3177,6 +3494,35 @@
         "text": {
           "type": "string",
           "example": "Отлично провели время"
+        },
+        "created_at": {
+          "type": "string",
+          "example": "2014-06-26 04:07:31"
+        },
+        "updated_at": {
+          "type": "string",
+          "example": "2014-06-26 04:07:31"
+        }
+      }
+    },
+    "Photo": {
+      "required": [
+        "url"
+      ],
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "place_id": {
+          "type": "integer",
+          "format": "int64",
+          "example": 1
+        },
+        "url": {
+          "type": "string",
+          "example": "https://place.com/pucture.jpg"
         },
         "created_at": {
           "type": "string",
